--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@clerk/elements": "^0.22.23",
+    "@clerk/nextjs": "^6.12.0",
     "@prisma/client": "^6.4.0",
     "imagekit": "^6.0.0",
     "imagekitio-next": "^1.0.1",
@@ -30,6 +33,6 @@
     "typescript": "^5"
   },
   "prisma": {
-  "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
- }
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  }
 }
